# sub-oi-dm

./: .gitignore  README.md  environment.yaml  setup.cfg
application/2afc_task/: configuration.py  experiments.py  likelihoods.py  models.py  priors.py
application/2afc_task/checkpoints/2afc_task/: checkpoint  ckpt-50.index  history_50.pkl
application/2afc_task/checkpoints/2afc_task_mixture_ddm/: checkpoint  ckpt-100.index
application/2afc_task/data/: 2afc_data.csv  posterior_resimulation_hehe_hetero.npy  yes_no_data.csv
application/2afc_task/notebook/: 2afc_experiment.ipynb
application/yes_no_task/: configuration.py  context.py  experiments.py  likelihoods.py  models.py  priors.py
application/yes_no_task/checkpoints/yes_no_task/: checkpoint  ckpt-50.index  history_50.pkl
application/yes_no_task/data/: yes_no_data.csv  yes_no_data_picture.csv  yes_no_data_words.csv
application/yes_no_task/notebook/: yes_no_experiment.ipynb  yes_no_task_experiment.ipynb
data/: .Rhistory  chen-2019-4a.csv  chen-2019-4b.csv  chen-2019_Exp4a Words vs Images_SIR_Test.csv  chen-2019_Exp4b Images vs Audio_SIR_Test.csv  clean_data.Rmd  criss-2017.csv  criss-2017_expt1_osf.csv  data_preparation.R  dedetas-2022.csv  dedetas-2022_data.csv  overview_datasets.xlsx  schnuerch-2014.csv  schnuerch-BA_oi_data.csv
notebooks/: dynamic_ddm.ipynb
notebooks/checkpoints/rwddm_shared_ndt/: checkpoint  ckpt-48.index  ckpt-49.index  ckpt-50.index  history_48.pkl  history_49.pkl  history_50.pkl  memory.pkl
src/: helpers.py  observation_model.py  priors.py
