[metadata]
name = Output interference
version = attr: applications.version.__version__
description = "Dynamic Modeling of Output interference"
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/smiplab/sub-oi-dm

author = Lukas Schumacher, Martin Schnuerch
maintainer = Lukas Schumacher, Martin Schnuerch

license = MIT
license_files = LICENSE

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
python_requires = >=3.9
packages = find:
install_requires =
    h5py >= 3.7
    numpy >= 1.23
    pandas >= 1.4
    scikit-learn >= 1.0
    numba >= 0.57
    bayesloop >= 1.5.7 
    seaborn >= 0.11
    matplotlib >= 3.5
    tensorflow-macos >= 2.10; sys_platform == 'darwin' and platform_machine == 'arm64'
    tensorflow >= 2.10.1; sys_platform != 'darwin' or platform_machine != 'arm64'
    tensorflow_probability >= 0.17